# streamqueue

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: bridge.rs  config.rs  config_loader.rs  consumers.rs  deduplication.rs  lib.rs  main.rs  model.rs  publishers.rs  route_runner.rs
src/endpoints/: amqp.rs  file.rs  http.rs  kafka.rs  memory.rs  mod.rs  mongodb.rs  mqtt.rs  nats.rs  static_endpoint.rs
tests/: README.md  integration_test.rs  memory_test.rs
tests/integration/: all_endpoints.rs  amqp.rs  common.rs  config.all.yml  config.amqp.yml  config.http2file.yml  config.kafka.yml  config.mongodb.yml  config.mqtt.yml  config.nats.yml  docker-compose.all.yml  kafka.rs  memory.rs  mod.rs  mongodb.rs  mosquitto.conf  mqtt.rs  nats.rs
tests/integration/config/: amqp.yml  http2file.yml  kafka.yml  mongodb.yml  mqtt.yml  nats.yml
tests/integration/docker-compose/: amqp.yml  kafka.yml  mongodb.yml  mqtt.yml  nats.yml
