[package]
name = "mq_multi_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "mq_multi_bridge"
path = "src/lib.rs"

[[bin]]
name = "mq_multi_bridge"
path = "src/main.rs"

[profile.release]
# Link-Time Optimization.
# lto = true
# Abort on panic to reduce binary size.
panic = "abort"

[profile.release-with-lto]
inherits = "release"
lto = true


[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "signal"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15" }
dotenvy = "0.15"
anyhow = "1.0.86"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Messaging Clients
async-nats = "0.45"
rdkafka = { version = "0.38", features = ["tokio"] }
lapin = { version = "3.7", features = ["rustls"] }
rumqttc = "0.25.1"
axum = "0.8.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

futures = "0.3.31"
async-channel = "2.5.0"
async-trait = "0.1"
async-stream = "0.3"
seahash = "4.1.0"
dashmap = "6.1.0"
once_cell = "1.21.3"
url = "2.5"
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

# Data & Serialization
serde_json = "1.0"

# Storage for Deduplication
sled = "0.34"

# Metrics
metrics = { version = "0.24" }
metrics-exporter-prometheus = "0.18"

[dev-dependencies]
serde_yaml = "0.9" # only for testing
tempfile = "3.10"
tracing-appender = "0.2"
chrono = "0.4"
metrics-util = "0.20.1"
uuid = { version = "1.19", features = ["v4"] }

[features]
default = []
integration-test = []

[[test]]
name = "integration_test"
harness = true # Use the standard test harness
required-features = ["integration-test"]
