[package]
name = "streamqueue"
version = "0.1.0"
edition = "2021"

[lib]
name = "streamqueue"
path = "src/lib.rs"

[profile.release]
# Link-Time Optimization.
# lto = true
# Abort on panic to reduce binary size.
panic = "abort"

[profile.release-with-lto]
inherits = "release"
lto = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "signal"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
dotenvy = { version = "0.15", optional = true }
anyhow = "1.0.86"

# Logging & Tracing
tracing = "0.1"

futures = "0.3.31"
async-trait = "0.1"
seahash = "4.1.0"
url = "2.5"

# Data & Serialization
serde_json = "1.0"

# Storage for Deduplication
sled = { version = "0.34", optional = true }

# Metrics
metrics = { version = "0.24", optional = true }

# --- Optional Endpoint Dependencies ---

# Kafka
rdkafka = { version = "0.38", features = ["tokio"], optional = true }
async-stream = { version = "0.3", optional = true } # Used by Kafka consumer

# AMQP (RabbitMQ)
lapin = { version = "3.7", features = ["rustls"], optional = true }

# NATS
async-nats = { version = "0.45", optional = true }

# MQTT
rumqttc = { version = "0.25.1", optional = true }

# HTTP
axum = { version = "0.8.7", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"], optional = true }

# Memory (for testing)
async-channel = { version = "2.5.0" }
dashmap = { version = "6.1.0"}
once_cell = { version = "1.21.3"  }

# Common TLS dependencies
rustls = { version = "0.23", features = ["ring"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.2", optional = true }

[dev-dependencies]
serde_yaml = "0.9" # only for testing
tempfile = "3.10"
tracing-appender = "0.2"
chrono = "0.4"
metrics-util = "0.20.1"
uuid = { version = "1.19", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[features]
default = ["full"]
full = [
    "metrics-all", "dedup", "dotenv"
]

# Endpoint features
kafka = ["rdkafka", "async-stream"]
amqp = ["lapin", "rustls", "rustls-pemfile"]
nats = ["async-nats", "rustls", "rustls-pemfile"]
mqtt = ["rumqttc", "rustls", "tokio-rustls", "rustls-pemfile"]
http = ["axum", "reqwest", "axum-server", "rustls", "tokio-rustls", "rustls-pemfile"]
file = [] # No extra deps

# Functionality features
metrics-all = ["metrics"]
dedup = ["sled"]
dotenv = ["dotenvy"]

integration-test = []

[[test]]
name = "integration_test"
harness = true # Use the standard test harness
required-features = ["integration-test", "full"]
